--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,24 @@
 #app {
 
-  li {
-    margin: {
-      left: 10%;
-      right: 10%;
-    }
-    border: 1px solid grey;
-    padding: 10px 0;
-    border-radius: 5px;
+  .list-wrapper {
     text-align: center;
-  }
 
+    li {
+      margin: {
+        left: 10%;
+        right: 10%;
+      }
+      border: 1px solid grey;
+      padding: 10px 0;
+      border-radius: 5px;
+      text-align: center;
+    }
+
+    button {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+    }
+
+  }
 }
