--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/scss/bootstrap.scss";
+
 #app {
 
   .list-wrapper {
@@ -12,6 +14,7 @@
       padding: 10px 0;
       border-radius: 5px;
       text-align: center;
+      list-style: none;
     }
 
     button {
