add font-awesome as plain css instead of scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,4 @@
-@import "~bootstrap/scss/bootstrap.scss";
-@import "./vendor/font-awesome/font-awesome";
+@import "~bootstrap/scss/bootstrap";
 
 #app {
 
