--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,13 +3,13 @@
 #app {
 
   .list-selector {
-    max-height: 500px;
+    height: 500px;
     overflow-y: scroll;
   }
 
   .list-wrapper {
     text-align: center;
-    max-height: 400px;
+    height: 400px;
     overflow-y: scroll;
 
     li {
