--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@ $primaryColor-1: rgba(255,90,0,0.1);
 
   .hidden {
     visibility: hidden;
+    height: 0;
   }
 
   //applies to list items and list of lists
@@ -112,6 +113,7 @@ $primaryColor-1: rgba(255,90,0,0.1);
         width: 100%;
 
         img {
+          @extend .centerElement;
           max-height: 100%;
           object-fit: cover;
         }
